--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,16 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FragmentSearch">
 
-    <TextView
+    <fragment
+        android:id="@+id/google_map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="검색"
-        android:textColor="@android:color/black"
-        android:textSize="50sp"/>
+        tools:ignore="MissingClass" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="500dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/sv_location"
+            android:queryHint="위치 기반으로 검색"
+            android:iconifiedByDefault="false"
+            android:layout_margin="10dp"
+            android:elevation="5dp" />
+
+        <SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/sv_keyword"
+            android:queryHint="키워드 기반으로 검색"
+            android:iconifiedByDefault="false"
+            android:layout_margin="10dp"
+            android:elevation="5dp" />
+    </LinearLayout>
+
+    <Button
+        android:text="장소검색"
+        android:layout_marginTop="500dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/button"/>
+
+</RelativeLayout>
