--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,44 +3,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentSearch">
+    tools:context=".FragmentSearch"
+    android:orientation="vertical">
+
+
+    <SearchView
+        android:id="@+id/sv_location"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="50dp"
+        android:elevation="5dp"
+        android:iconifiedByDefault="false"
+        android:background="@color/white"
+        android:queryHint="위치 기반으로 검색" />
+
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="59dp"
+        android:text="카페" />
+
+    <Button
+        android:id="@+id/now"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="63dp"
+        android:text="현재위치" />
+
+
+    <Button
+        android:id="@+id/gather"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="62dp"
+        android:layout_marginEnd="42dp"
+        android:text="수거함 위치" />
 
     <fragment
         android:id="@+id/google_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <LinearLayout
-        android:layout_marginTop="500dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/sv_location"
-            android:queryHint="위치 기반으로 검색"
-            android:iconifiedByDefault="false"
-            android:layout_margin="10dp"
-            android:elevation="5dp" />
-
-        <SearchView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/sv_keyword"
-            android:queryHint="키워드 기반으로 검색"
-            android:iconifiedByDefault="false"
-            android:layout_margin="10dp"
-            android:elevation="5dp" />
-    </LinearLayout>
-
-    <Button
-        android:text="장소검색"
-        android:layout_marginTop="500dp"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:id="@+id/button"/>
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-4dp"
+        android:layout_marginTop="0dp" />
 
 </RelativeLayout>
