개인 바코드 생성
사용자 아이디로 바코드 생성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="center"
         android:textSize="50dp"
         android:textColor="#2FA599"
-        android:text="CG24?"/>
+        android:text="CG24"/>
 
     <Button
         android:layout_gravity="center"
