--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     tools:context=".FragmentMypage">
 
+    <!--
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,21 +15,68 @@
         android:text="마이페이지"
         android:textColor="@android:color/black"
         android:textSize="50sp"/>
+        -->
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="109dp"
+        android:src="@drawable/userpage" />
 
     <TextView
         android:id="@+id/loginNickname"
         android:gravity="center"
         android:text="닉네임"
+        android:textColor="#2196f3"
+        android:layout_gravity="center"
         android:textSize="20sp"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <Button
-        android:gravity="bottom"
+    <TextView
+        android:id="@+id/loginEmail"
+        android:gravity="center"
+        android:text="이메일"
+        android:textColor="#2196f3"
+        android:layout_gravity="center"
+        android:textSize="20sp"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:gravity="center"
         android:id="@+id/mypage_logout_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="30dp"
+        android:textColor="#2196f3"
+        android:background="#D6D7D7"
+        android:textStyle="bold"
+        android:textSize="15dp"
         android:text="로그아웃"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/qrcode"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
+
+    <!--
+    <TextView
+        android:id="@+id/qr_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:text="none"
+        android:textColor="@android:color/black"
+        android:textSize="30sp"/>
+        -->
 
 </LinearLayout>
