--- a/app/src/main/res/menu/main_menu_bottom.xml
+++ b/app/src/main/res/menu/main_menu_bottom.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="MENU1" />
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="지도" />
 
     <item
         android:id="@+id/menu_search"
-        android:icon="@drawable/ic_baseline_search_24"
-        android:title="MENU2" />
+        android:icon="@drawable/ic_baseline_control_point_24"
+        android:title="저금통" />
 
     <item
         android:id="@+id/menu_mypage"
         android:icon="@drawable/ic_baseline_person_24"
-        android:title="MENU3" />
+        android:title="마이페이지" />
 
 </menu>
