--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -5,78 +5,95 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ffffff"
     tools:context=".FragmentMypage">
 
-    <!--
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
         android:text="마이페이지"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"
         android:textColor="@android:color/black"
-        android:textSize="50sp"/>
-        -->
+        android:textSize="35sp"/>
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <LinearLayout
+        android:id="@+id/mypage_layout2"
         android:layout_width="match_parent"
-        android:layout_height="109dp"
-        android:src="@drawable/userpage" />
+        android:layout_height="match_parent"
+        android:background="@drawable/round_margin_green"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/loginNickname"
-        android:gravity="center"
-        android:text="닉네임"
-        android:textColor="#2196f3"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <ImageView
+            android:id="@+id/mypage_user_img"
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="25dp"
+            android:src="@drawable/userimg" />
 
-    <TextView
-        android:id="@+id/loginEmail"
-        android:gravity="center"
-        android:text="이메일"
-        android:textColor="#2196f3"
-        android:layout_gravity="center"
-        android:textSize="20sp"
-        android:layout_marginTop="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:id="@+id/mypage_layout3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/round_margin_white"
+            android:layout_marginBottom="90dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:gravity="center"
-        android:id="@+id/mypage_logout_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:textColor="#2196f3"
-        android:background="#D6D7D7"
-        android:textStyle="bold"
-        android:textSize="15dp"
-        android:text="로그아웃"/>
+            <TextView
+                android:id="@+id/loginNickname"
+                android:gravity="center"
+                android:text="닉네임"
+                android:textColor="#112C26"
+                android:layout_gravity="center"
+                android:textSize="25sp"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/qrcode"
-        android:layout_marginTop="30dp"
-        android:layout_gravity="center"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:gravity="center"
+                android:id="@+id/mypage_rename_btn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:textColor="#ffffff"
+                android:background="@drawable/round_margin_green"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:text="이름 변경"/>
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/qrcode"
+                android:layout_marginTop="15dp"
+                android:layout_gravity="center"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"/>
 
-    <!--
-    <TextView
-        android:id="@+id/qr_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="top"
-        android:text="none"
-        android:textColor="@android:color/black"
-        android:textSize="30sp"/>
-        -->
+            <androidx.appcompat.widget.AppCompatButton
+                android:gravity="center"
+                android:id="@+id/mypage_logout_btn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
+                android:textColor="#ffffff"
+                android:background="@drawable/round_margin_green"
+                android:textStyle="bold"
+                android:textSize="15dp"
+                android:text="로그아웃"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
