--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,54 +3,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FragmentSearch"
+    android:background="#ffffff"
     android:orientation="vertical">
-
 
     <SearchView
         android:id="@+id/sv_location"
-        android:layout_width="match_parent"
+        android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginRight="30dp"
         android:background="@color/white"
         android:elevation="5dp"
-        android:iconifiedByDefault="false"
+        android:gravity="center"
         android:queryHint="위치 기반으로 검색" />
 
     <Button
-            android:id="@+id/button"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="42dp"
-            android:layout_marginTop="59dp"
-            android:text="카페" />
+        android:id="@+id/button"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="42dp"
+        android:layout_marginTop="65dp"
+        android:background="@drawable/map_btncolor"
+        android:textColor="@drawable/map_btntext"
+        android:text="카페" />
 
-        <Button
-            android:id="@+id/now"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="63dp"
-            android:text="현재위치" />
+    <Button
+        android:id="@+id/now"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="65dp"
+        android:textColor="@drawable/map_btntext"
+        android:text="현재위치" />
 
 
-        <Button
-            android:id="@+id/gather"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="62dp"
-            android:layout_marginEnd="42dp"
-            android:text="수거함 위치" />
+    <Button
+        android:id="@+id/gather"
+        android:layout_width="100dp"
+        android:layout_height="45dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="65dp"
+        android:layout_marginEnd="42dp"
+        android:background="@drawable/map_btncolor"
+        android:textColor="@drawable/map_btntext"
+        android:text="수거함" />
 
     <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
         android:id="@+id/google_map"
@@ -60,7 +66,5 @@
         android:layout_marginStart="-4dp"
         android:layout_marginTop="0dp"
         map:mapId="CG24" />
-
-
 
 </RelativeLayout>
