--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,47 +25,59 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button"
-        android:layout_width="100dp"
+        android:layout_toStartOf="@+id/now"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="20dp"
         android:background="@drawable/map_noclick"
+        android:drawableStart="@drawable/img_map_cafe"
+        android:paddingRight="10dp"
+        android:text="카페"
         android:textColor="@color/white"
-        android:text="카페" />
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/now"
-        android:layout_width="100dp"
+
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/map_noclick"
+        android:drawableStart="@drawable/img_map_now"
         android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:paddingRight="10dp"
         android:text="현재위치" />
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/gather"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="42dp"
+        android:layout_toEndOf="@+id/now"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="70dp"
         android:background="@drawable/map_noclick"
+        android:drawableStart="@drawable/img_map_gather"
+        android:paddingRight="10dp"
+        android:text="수거함"
         android:textColor="@color/white"
-        android:text="수거함" />
+        android:textSize="15dp"
+        android:textStyle="bold" />
 
-    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
+    <fragment
         android:id="@+id/google_map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
         android:layout_marginStart="-4dp"
-        android:layout_marginTop="0dp"
-        map:mapId="CG24" />
+        android:layout_marginTop="-3dp"
+        app:mapId="CG24" />
 
 </RelativeLayout>
