--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.CG24" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!--상단바 없어지게-->
-        <item name="windowNoTitle">true</item>
+    <style name="Theme.CG24" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!--상단바 없어지게
+        <item name="windowNoTitle">true</item>-->
 
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/quantum_grey200</item>
+        <item name="colorPrimaryVariant">@color/quantum_grey200</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
