--- a/app/src/main/res/menu/main_menu_bottom.xml
+++ b/app/src/main/res/menu/main_menu_bottom.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/menu_home"
-        android:icon="@drawable/ic_baseline_map_24"
+        android:icon="@drawable/ic_map"
         android:title="지도" />
 
     <item
         android:id="@+id/menu_search"
-        android:icon="@drawable/ic_baseline_control_point_24"
+        android:icon="@drawable/ic_home"
         android:title="저금통" />
 
     <item
