--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -23,7 +23,7 @@
         android:id="@+id/mypage_layout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/round_margin_green"
+        android:background="@drawable/home_back1"
         android:orientation="vertical">
 
         <ImageView
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/round_margin_white"
-            android:layout_marginBottom="90dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginRight="30dp"
             android:layout_marginLeft="30dp"
             android:layout_marginTop="10dp"
@@ -54,13 +54,13 @@
                 android:textSize="25sp"
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="35dp"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:gravity="center"
                 android:id="@+id/mypage_rename_btn"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:textColor="#ffffff"
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/qrcode"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"/>
@@ -82,9 +82,9 @@
                 android:gravity="center"
                 android:id="@+id/mypage_logout_btn"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="20dp"
                 android:textColor="#ffffff"
                 android:background="@drawable/round_margin_green"
@@ -93,7 +93,18 @@
                 android:text="로그아웃"/>
 
         </LinearLayout>
-
+        <TextView
+            android:gravity="center"
+            android:text="📢 지정된 위치에 컵을 올려주세요 !"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"/>
     </LinearLayout>
+
+
 
 </LinearLayout>
