[feat] 로그인 페이지 수정 및 어플 아이콘 변경

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,20 +10,21 @@
     <!-- tools:context=".LoginActivity"-->
 
     <TextView
-        android:layout_marginTop="70dp"
-        android:layout_marginBottom="50dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
+        android:layout_marginTop="60dp"
         android:layout_gravity="center"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold"
         android:textColor="#112C26"
-        android:text="CG24"/>
+        android:text="Cup Checker!"/>
+
 
     <ImageView
         android:layout_gravity="center"
         android:layout_width="250dp"
         android:layout_height="250dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="70dp"
         android:background="@drawable/earth_img"/>
 
@@ -58,5 +59,13 @@
         android:textSize="15dp"
         android:text="구글 로그인"/>
 
+    <TextView
+        android:layout_marginTop="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textSize="15sp"
+        android:textColor="#112C26"
+        android:text="Copyrightⓒ CG24"/>
 
 </LinearLayout>
