--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,6 +74,7 @@
                 android:paddingBottom="20dp">
 
                 <ImageView
+                    android:id="@+id/home_point_iv"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center"
@@ -96,9 +97,10 @@
                         android:textStyle="italic" />
 
                     <TextView
+                        android:id="@+id/home_total_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="1906"
+                        android:text="100"
                         android:textColor="@color/white"
                         android:textSize="25sp"
                         android:textStyle="italic" />
