--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,10 +12,11 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:text="날짜"
+            android:text="날짜2"
             android:textColor="#112C26"
             android:textFontWeight="@integer/material_motion_duration_long_2"
             android:textSize="30sp" />
